file(GLOB SOURCE *.c *.cpp *.rc)
add_library(avifile SHARED ${SOURCE} ${CMAKE_SOURCE_DIR}/dummy.c avifile.def avifile.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(avifile.dll16 avifile)
add_dependencies(avifile convspec generate_asm_avifile)
target_link_libraries(avifile libwine winecrt0 wow32 krnl386 avifil32.lib)
set_target_properties(avifile PROPERTIES SUFFIX ".dll16")
