file(GLOB SOURCE *.c *.cpp *.rc)
add_library(comm SHARED ${SOURCE} ${PROJECT_SOURCE_DIR}/dummy.c ${CMAKE_CURRENT_BINARY_DIR}/comm.def comm.drv16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(comm.drv16 comm)
target_link_libraries(comm libwine winecrt0 wow32 krnl386)
set_target_properties(comm PROPERTIES SUFFIX ".drv16")
