file(GLOB SOURCE *.c *.cpp *.rc)
add_library(commdlg SHARED ${SOURCE} commdlg.def commdlg.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(commdlg.dll16 commdlg)
add_dependencies(commdlg convspec generate_asm_commdlg)
target_link_libraries(commdlg libwine winecrt0 wow32 krnl386 user comdlg32.lib)
set_target_properties(commdlg PROPERTIES SUFFIX ".dll16")
