file(GLOB SOURCE *.c *.cpp *.rc)
add_library(commdlg SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/commdlg.def commdlg.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(commdlg.dll16 commdlg)
target_link_libraries(commdlg libwine winecrt0 krnl386 user comdlg32.lib)
set_target_properties(commdlg PROPERTIES SUFFIX ".dll16")
