file(GLOB SOURCE *.c *.cpp *.rc)
add_library(compobj SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/compobj.def compobj.dll16.obj)
include_directories(../wine ${CMAKE_BINARY_DIR})
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(compobj.dll16 compobj)
target_link_libraries(compobj libwine winecrt0 krnl386 ole2 ole32.lib)
set_target_properties(compobj PROPERTIES SUFFIX ".dll16")
