file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ctl3d SHARED ${SOURCE} ctl3d.def ctl3d.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ctl3d.dll16 ctl3d)
add_dependencies(ctl3d convspec generate_asm_ctl3d)
target_link_libraries(ctl3d libwine winecrt0 wow32 krnl386 ctl3dv2)
set_target_properties(ctl3d PROPERTIES SUFFIX ".dll16")
