file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ddeml SHARED ${SOURCE} ddeml.def ddeml.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ddeml.dll16 ddeml)
add_dependencies(ddeml convspec generate_asm_ddeml)
target_link_libraries(ddeml libwine winecrt0 wow32 krnl386)
set_target_properties(ddeml PROPERTIES SUFFIX ".dll16")
