file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ddeml SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/ddeml.def ddeml.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ddeml.dll16 ddeml)
target_link_libraries(ddeml libwine winecrt0 krnl386)
set_target_properties(ddeml PROPERTIES SUFFIX ".dll16")
