file(GLOB SOURCE *.c *.cpp *.rc)
add_library(dispdib SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/dispdib.def dispdib.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(dispdib.dll16 dispdib)
target_link_libraries(dispdib libwine winecrt0 wow32 krnl386)
set_target_properties(dispdib PROPERTIES SUFFIX ".dll16")
