file(GLOB SOURCE *.c *.cpp *.rc)
add_library(display SHARED ${SOURCE} display.def display.drv16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(display.drv16 display)
add_dependencies(display convspec generate_asm_display)
target_link_libraries(display libwine winecrt0 wow32 krnl386)
set_target_properties(display PROPERTIES SUFFIX ".drv16")
