file(GLOB SOURCE *.c *.cpp *.rc)
add_library(keyboard SHARED ${SOURCE} keyboard.def keyboard.drv16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(keyboard.drv16 keyboard)
add_dependencies(keyboard convspec generate_asm_keyboard)
target_link_libraries(keyboard libwine winecrt0 wow32 krnl386)
set_target_properties(keyboard PROPERTIES SUFFIX ".drv16")
