file(GLOB SOURCE *.c *.cpp)
add_library(krnl386 SHARED ${SOURCE} krnl386.def krnl386.exe16.obj)
include_directories(../wine)
add_definitions(-DMZ_SUPPORTED -DENABLEREDIRECTSYSTEMDIR -D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN=)
function(spec_build file modname)
add_custom_command(OUTPUT ${file}.obj
COMMAND convspec ${CMAKE_CURRENT_LIST_DIR}/${file}.spec ${modname} > ${file}.asm && ${ASM_TOOL_DIR}/as --32 -o ${file}.obj ${file}.asm)
add_custom_target(generate_asm DEPENDS ${file}.obj)
endfunction()
spec_build(krnl386.exe16 KERNEL)
add_dependencies(krnl386 generate_asm convspec)
target_link_libraries(krnl386  libwine winecrt0 lz32.lib ntdll.lib ddraw.lib dsound.lib wow32)
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
set_target_properties(krnl386 PROPERTIES SUFFIX ".exe16")
