file(GLOB SOURCE *.c *.cpp)
add_library(krnl386 SHARED ${SOURCE} krnl386.def krnl386.exe16.obj)
include_directories(../wine)
add_definitions(-DMZ_SUPPORTED -DENABLEREDIRECTSYSTEMDIR -D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(krnl386.exe16 KERNEL)
add_dependencies(krnl386 convspec generate_asm_krnl386)
target_link_libraries(krnl386 libwine winecrt0 lz32.lib ntdll.lib ddraw.lib dsound.lib wow32)
set_target_properties(krnl386 PROPERTIES SUFFIX ".exe16")
