file(GLOB SOURCE *.c *.cpp *.rc)
add_library(lzexpand SHARED ${SOURCE} lzexpand.def lzexpand.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(lzexpand.dll16 lzexpand)
add_dependencies(lzexpand convspec generate_asm_lzexpand)
target_link_libraries(lzexpand libwine winecrt0 wow32 krnl386)
set_target_properties(lzexpand PROPERTIES SUFFIX ".dll16")
