file(GLOB SOURCE *.c *.cpp *.rc)
add_library(mouse SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/mouse.def mouse.drv16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(mouse.drv16 mouse)
target_link_libraries(mouse libwine winecrt0 krnl386)
set_target_properties(mouse PROPERTIES SUFFIX ".drv16")
