file(GLOB SOURCE *.c *.cpp *.rc)
add_library(msacm SHARED ${SOURCE} msacm.def msacm.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(msacm.dll16 msacm)
add_dependencies(msacm convspec generate_asm_msacm)
target_link_libraries(msacm libwine winecrt0 wow32 krnl386 msacm32.lib)
set_target_properties(msacm PROPERTIES SUFFIX ".dll16")
