file(GLOB SOURCE *.c *.cpp *.rc)
add_library(nddeapi SHARED ${SOURCE} nddeapi.def nddeapi.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(nddeapi.dll16 nddeapi)
add_dependencies(nddeapi convspec generate_asm_nddeapi)
target_link_libraries(nddeapi libwine winecrt0 wow32 krnl386)
set_target_properties(nddeapi PROPERTIES SUFFIX ".dll16")
