file(GLOB SOURCE *.c *.cpp *.rc)
add_library(nddeapi SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/nddeapi.def nddeapi.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(nddeapi.dll16 nddeapi)
target_link_libraries(nddeapi libwine winecrt0 krnl386)
set_target_properties(nddeapi PROPERTIES SUFFIX ".dll16")
