file(GLOB SOURCE *.c *.cpp *.rc)
add_library(netapi SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/netapi.def netapi.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(netapi.dll16 netapi)
target_link_libraries(netapi libwine winecrt0 krnl386)
set_target_properties(netapi PROPERTIES SUFFIX ".dll16")
