file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ntvdm SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/ntvdm.def)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
target_link_libraries(ntvdm krnl386)
set_target_properties(ntvdm PROPERTIES PREFIX "")
