file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ole2 SHARED ${SOURCE} ole2.def ole2.dll16.obj ${CMAKE_CURRENT_BINARY_DIR}/ifs_16.c)
include_directories(../wine ${CMAKE_CURRENT_BINARY_DIR} .)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
widl_build(ifs.idl ${CMAKE_CURRENT_BINARY_DIR}/ifs_16.c ${CMAKE_CURRENT_BINARY_DIR}/ifs_16.h)
spec_build(ole2.dll16 ole2)
add_dependencies(ole2 widl)
add_dependencies(ole2 convspec generate_asm_ole2 generate_ifs_ifs)
target_link_libraries(ole2 libwine winecrt0 wow32 krnl386 ole32.lib user)
set_target_properties(ole2 PROPERTIES SUFFIX ".dll16")
