file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ole2conv SHARED ${SOURCE} ${CMAKE_SOURCE_DIR}/dummy.c ole2conv.def ole2conv.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ole2conv.dll16 ole2conv)
add_dependencies(ole2conv convspec generate_asm_ole2conv)
target_link_libraries(ole2conv libwine winecrt0 wow32 krnl386)
set_target_properties(ole2conv PROPERTIES SUFFIX ".dll16")
