file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ole2nls SHARED ${SOURCE} ole2nls.def ole2nls.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ole2nls.dll16 ole2nls)
add_dependencies(ole2nls convspec generate_asm_ole2nls)
target_link_libraries(ole2nls libwine winecrt0 wow32 krnl386)
set_target_properties(ole2nls PROPERTIES SUFFIX ".dll16")
