file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ole2nls SHARED ${SOURCE} ${CMAKE_CURRENT_BINARY_DIR}/ole2nls.def ole2nls.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ole2nls.dll16 ole2nls)
target_link_libraries(ole2nls libwine winecrt0 krnl386)
set_target_properties(ole2nls PROPERTIES SUFFIX ".dll16")
