file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ole2prox SHARED ${SOURCE} ${CMAKE_SOURCE_DIR}/dummy.c ole2prox.def ole2prox.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ole2prox.dll16 ole2prox)
add_dependencies(ole2prox convspec generate_asm_ole2prox)
target_link_libraries(ole2prox libwine winecrt0 wow32 krnl386)
set_target_properties(ole2prox PROPERTIES SUFFIX ".dll16")
