file(GLOB SOURCE *.c *.cpp *.rc)
add_library(ole2thk SHARED ${SOURCE} ${CMAKE_SOURCE_DIR}/dummy.c ole2thk.def ole2thk.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(ole2thk.dll16 ole2thk)
add_dependencies(ole2thk convspec generate_asm_ole2thk)
target_link_libraries(ole2thk libwine winecrt0 wow32 krnl386)
set_target_properties(ole2thk PROPERTIES SUFFIX ".dll16")
