file(GLOB SOURCE *.c *.cpp *.rc)
add_library(olecli SHARED ${SOURCE} olecli.def olecli.dll16.obj)
include_directories(../wine)
add_definitions(-D_X86_ -D__WINESRC__ -D__i386__ -DUSE_COMPILER_EXCEPTIONS -DHAVE_STRNCASECMP -DHAVE__STRNICMP -D_WINTERNL_ -DNtCurrentTeb=NtCurrentTeb__ -Dinline=__inline -DDECLSPEC_HIDDEN= -Dstrncasecmp=_strnicmp)
spec_build(olecli.dll16 olecli)
add_dependencies(olecli convspec generate_asm_olecli)
target_link_libraries(olecli libwine winecrt0 wow32 krnl386 olecli32.lib)
set_target_properties(olecli PROPERTIES SUFFIX ".dll16")
